# controla

./: .gitignore  Cargo.toml  README.md  package-lock.json  rustfmt.toml
.github/ISSUE_TEMPLATE/: libre.yml  posible_bug.yml  pregunta.yml  solicitud_mejora.yml
config/: config-api.json  logrotate  systemd.service
config/apps/gymdanzasilvia/: config.var
config/apps/gymdanzasilvia/secretos/: secreto
config/db/inicio/: 1-db.sql  2-usuario.sql  3-tablas.sql
config/db/pack-1.1.0/: 1-tablas.sql
config/db/pack-1.2.0/: 1-tablas.sql
config/db/pack-1.4.0/: 1-tablas.sql
config/db/pack-1.5.0/: 1-tablas.sql
config/test/: config-test.sh  config.json  secreto
scripts/: crear_admin.sh
scripts/api/: build.sh
scripts/db/: controla-bk-db.sh  restore-full-db.sh  ufw-db-remote.sh
scripts/web/: build.sh
src/: app.rs  config.rs  main.rs
src/app/: api.rs  dto.rs  mod.rs
src/config/: dominio.rs  mod.rs  repo.rs  servicio.rs  setup.rs
src/horario/: dominio.rs  mod.rs  repo.rs  servicio.rs
src/inc/: dominio.rs  mod.rs  repo.rs  servicio.rs
src/informes/: dominio.rs  mod.rs  repo.rs  servicio.rs
src/infra/: db.rs  dominio.rs  macros.rs  middleware.rs  mod.rs  servicio.rs
src/infraestructura/: db.rs  mod.rs  servicio.rs
src/marcaje/: dominio.rs  mod.rs  repo.rs  servicio.rs
src/registro/: dominio.rs  mod.rs  repo.rs  repositorio.rs  servicio.rs
src/traza/: dominio.rs  mod.rs  repo.rs  servicio.rs
src/usuarios/: dominio.rs  mod.rs  repo.rs  servicio.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: CrudDashboard.tsx  config.ts  constants.ts  controla.tsx  error.ts  main.tsx
web/src/api/: calendario.ts  config.ts  fabrica.ts  incidencias.ts  informe.ts  marcaje.ts  registro.ts  usuarios.ts
web/src/components/: CalendarioCrear.tsx  CalendarioEdit.tsx  CalendarioFechaCrear.tsx  CalendarioFechaEdit.tsx  CalendarioFechaForm.tsx  CalendarioFechas.tsx  CalendarioForm.tsx  CalendarioList.tsx  ConfigForm.tsx  ControlaIcon.tsx  DashboardHeader.tsx  DashboardLayout.tsx  DashboardSidebar.tsx  DashboardSidebarHeaderItem.tsx  DashboardSidebarPageItem.tsx  ErrorBoundary.tsx  ErrorPage.tsx  GestionIncidencia.tsx  HorarioConfigurador.tsx  HorarioCrear.tsx  HorarioEdit.tsx  HorarioForm.tsx  IncidenciaGestion.tsx  IncidenciaList.tsx  IncidenciaRevision.tsx  IncidenciaSolicitud.tsx  InformeCumplimientoHorario.tsx  Login.tsx  Logout.tsx  MarcajeAuto.tsx  MarcajeConsulta.tsx  MarcajeList.tsx  MarcajeManual.tsx  MarcajeResumen.tsx  PageContainer.tsx  RegistroManual.tsx  ResumenMarcaje.tsx  ResumenRegistro.tsx  RevisionIncidencias.tsx  SelectorEmpleado.tsx  (+10 more)
web/src/context/: DashboardSidebarContext.ts
web/src/hooks/: useComponentMounted.ts
web/src/hooks/useConfig/: ConfigContext.tsx  ConfigProvider.tsx  useConfig.tsx
web/src/hooks/useDialogs/: DialogsProvider.tsx  useDialogs.tsx
web/src/hooks/useNotifications/: NotificationsProvider.tsx  useNotifications.tsx
web/src/hooks/useUsuarioLogeado/: UsuarioLogeadoContext.tsx  UsuarioLogeadoProvider.tsx  useUsuarioLogeado.tsx
web/src/modelos/: calendario.ts  config.ts  dto.ts  formatos.ts  incidencias.ts  informes.ts  marcaje.ts  registro.ts  usuarios.ts
web/src/net/: interceptor.ts  usenet.tsx
web/src/theme/: AppTheme.tsx  location.tsx
web/src/theme/customizations/: dataGrid.ts  dataGrid.tsx  datePickers.ts  formInput.tsx  index.ts
