[package]
name = "controla"
version = "0.1.0"
edition = "2024"
authors = ["David Suárez Pascual <dav.sua.pas@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/davsuapas/controla"
description = "Control del registro horario del personal de una organización"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
hmac = "0.12"
hex = "0.4"
ring = "0.17.14"
base64 = "0.22.1"
sha2 = "0.10"
data-encoding = "2.4"
derive_builder = "0.20.2"
anyhow = "1.0.99"
thiserror = "2.0.16"
smallvec = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3.20"
serde = "1.0.219"
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
time = "0.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }

[lints.rust]
future-incompatible = { level = "deny" }
warnings = { level = "deny" }
keyword-idents = { level = "deny" }
let-underscore = { level = "deny" }
nonstandard-style = { level = "deny" }
refining-impl-trait = { level = "deny" }
unused = { level = "deny" }
missing_docs = { level = "deny" }

[lints.rustdoc]
broken_intra_doc_links = { level = "deny" }
private_intra_doc_links = { level = "deny" }
missing_crate_level_docs = { level = "deny" }
invalid_html_tags = { level = "deny" }
invalid_rust_codeblocks = { level = "deny" }
bare_urls = { level = "deny" }
unescaped_backticks = { level = "deny" }
redundant_explicit_links = { level = "deny" }

[lints.clippy]
all = { level = "deny" }
