[package]
name = "controla-api"
version = "1.0.0"
edition = "2024"
authors = ["David Suárez Pascual <dav.sua.pas@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/davsuapas/controla"
description = "Control del registro horario del personal de una organización"

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
hmac = "0.12.1"
hex = "0.4.3"
ring = "0.17.14"
base64 = "0.22.1"
sha2 = "0.10.9"
data-encoding = "2.9.0"
derive_builder = "0.20.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
smallvec = "1.15.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
time = "0.3.44"
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["cookie"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
future-incompatible = { level = "deny" }
warnings = { level = "deny" }
keyword-idents = { level = "deny" }
let-underscore = { level = "deny" }
nonstandard-style = { level = "deny" }
refining-impl-trait = { level = "deny" }
unused = { level = "deny" }
missing_docs = { level = "deny" }

[lints.rustdoc]
broken_intra_doc_links = { level = "deny" }
private_intra_doc_links = { level = "deny" }
missing_crate_level_docs = { level = "deny" }
invalid_html_tags = { level = "deny" }
invalid_rust_codeblocks = { level = "deny" }
bare_urls = { level = "deny" }
unescaped_backticks = { level = "deny" }
redundant_explicit_links = { level = "deny" }

[lints.clippy]
all = { level = "deny" }
